--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^16.0.3",
     "express": "4.17.1",
     "joi": "^17.7.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "morgan": "1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nanoid": "3.3.4"
   },
   "devDependencies": {
